[package]
name = "backrub"
version = "0.1.0"
authors = ["Markus Brueckner <namenlos@geekbetrieb.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
walkdir = "2"
rmp-serde = "0.14.4"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
hex = "0.4.2"

[dev-dependencies]
assert_fs = "1.0.0"
assert2 = "0.3.3"
rand = "0.7.3"

[lib]
name = "backrub"
path = "src/lib.rs"
